# zitpit

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAIMS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.service  Dockerfile.workspace  EXTERNAL_AGENT_FEEDBACK.md  GOVERNANCE.md  LICENSE  MISSION.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  compose.yaml  deny.toml  f1.txt  f10.txt  f12.txt  f13.txt  f14.txt  f2.txt  f3.txt  f4.txt  f7.txt  f8.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_concern.md
.github/workflows/: ci.yml  release.yml
crates/zitpit-admin-client/: Cargo.toml
crates/zitpit-admin-client/src/: lib.rs
crates/zitpit-battle-cli/: Cargo.toml
crates/zitpit-battle-cli/src/: main.rs
crates/zitpit-battle-packs/packs/browser/token-exfil/: browser.spec.js  pack.json  page.html
crates/zitpit-battle-packs/packs/controls/benign-browser-open/: browser.spec.js  pack.json  page.html
crates/zitpit-battle-packs/packs/controls/benign-cargo-build/: Cargo.toml  lib.rs  pack.json
crates/zitpit-battle-packs/packs/controls/benign-egress-clean-upload/: command.txt  pack.json
crates/zitpit-battle-packs/packs/controls/benign-egress-docs-note/: command.txt  pack.json
crates/zitpit-battle-packs/packs/controls/benign-egress-release-note/: command.txt  pack.json
crates/zitpit-battle-packs/packs/controls/benign-git-release/: README.md  pack.json
crates/zitpit-battle-packs/packs/controls/benign-github-action/: action.yml  pack.json
crates/zitpit-battle-packs/packs/controls/benign-go-module/: go.mod  pack.json
crates/zitpit-battle-packs/packs/controls/benign-npm/: index.js  pack.json  package.json
crates/zitpit-battle-packs/packs/controls/benign-pip-build/: pack.json  setup.py
crates/zitpit-battle-packs/packs/controls/benign-shell-command/: pack.json
crates/zitpit-battle-packs/packs/controls/benign-shell-installer/: install.sh  pack.json
crates/zitpit-battle-packs/packs/controls/benign-workspace-open/: pack.json
crates/zitpit-battle-packs/packs/egress/archive-secret-staging-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/git-push-source-ip-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/http-browser-token-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/http-env-bundle-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/http-internal-topology-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/http-phi-record-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/http-private-key-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/egress/http-source-bundle-exfil/: pack.json  payload.txt
crates/zitpit-battle-packs/packs/git/hidden-example-payload/: README.md  pack.json
crates/zitpit-battle-runner/: Cargo.toml
crates/zitpit-battle-runner/src/: lib.rs
crates/zitpit-battle-types/: Cargo.toml
crates/zitpit-battle-types/src/: lib.rs
crates/zitpit-config/: Cargo.toml
crates/zitpit-config/src/: lib.rs
crates/zitpit-core/: Cargo.toml
crates/zitpit-core/src/: behavior.rs  broker.rs  classifier.rs  dlp.rs  egress.rs  firecracker.rs  gitlane.rs  lab.rs  lib.rs  manifest.rs  node.rs  policy.rs  store.rs  types.rs
crates/zitpit-flags/: Cargo.toml
crates/zitpit-flags/src/: lib.rs
crates/zitpit-gateway/: Cargo.toml
crates/zitpit-gateway/src/: lib.rs  main.rs
crates/zitpit-lab/: Cargo.toml
crates/zitpit-lab/src/: lib.rs  main.rs
crates/zitpit-manifest/: Cargo.toml
crates/zitpit-manifest/src/: lib.rs  main.rs
crates/zitpit-node-agent/: Cargo.toml
crates/zitpit-node-agent/src/: lib.rs  main.rs
crates/zitpit-sessiond/: Cargo.toml
crates/zitpit-sessiond/src/: lib.rs  main.rs
crates/zitpit-testing/: Cargo.toml
crates/zitpit-testing/fixtures/attacks/: git-connect.json  node-apply-bootstrap.json
crates/zitpit-testing/fixtures/golden/: git-connect-classification.json
crates/zitpit-testing/fixtures/honeypot/: corpus.json
crates/zitpit-testing/src/: lib.rs
crates/zitpit-tui/: Cargo.toml
crates/zitpit-tui/src/: lib.rs  main.rs
crates/zitpit-watch/: Cargo.toml
crates/zitpit-watch/src/: lib.rs  main.rs
deploy/: zitpit-policy.example.json
deploy/postgres/: 001_init.sql
deploy/workspace/: entrypoint.sh  protected-session.sh  sshd_config.zitpit  tmux-protected.conf  zitpit-protected-profile.sh  zitpit-protected-zshrc
docs/: EXTERNAL_AGENT_FEEDBACK.md  agent-setup.md  architecture.md  benchmarks.md  claim-matrix.yaml  contributor-map.md  dependency-policy.md  deployment-hardening.md  evidence-index.md  faq.md  glossary.md  hash-verification.md  launch-checklist.md  operator-guide.md  policy-model.md  quickstart.md  release-verification.md  repo-layout.md  threat-model.md  trust-model.md
docs/benchmarks/: latest.json  latest.md
docs/benchmarks/snapshots/: 2026-04-04-prelaunch.json  README.md
docs/notes/: README.md  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  a6.txt  a7.txt
docs/reviews/: EXTERNAL_AGENT_FEEDBACK.md  README.md  launch-readiness-summary.md
docs/reviews/2026-04-release-audit/: f5.txt  f6.txt  f9.txt  p1.txt  p10.txt  p11.txt  p2.txt  p3.txt  p4.txt  p5.txt  p6.txt  p7.txt  p8.txt  p9.txt
examples/: sample-decision-request.json
paper/: .gitignore  README.md  diagram-prompts.md  latexmkrc  main.tex  references.bib
paper/figures/: architecture.eps  intake_path.eps  network.eps  opener_comparison_reportlab.eps  speedup.eps
paper/scripts/: build_figures.py  build_opener_matplotlib.py  build_opener_reportlab.py
papers/: README.md  outline.md  publication-draft.md  references.md
scripts/: build_release_bundle.sh  check_claim_matrix.py  check_markdown_links.py  check_publication_sync.py  check_repo_hygiene.sh  demo_verify_hash.sh  protected_ssh_demo.sh  prove_security.sh  render_release_notes.py  verify_hash.sh
xtask/: Cargo.toml
xtask/src/: bench.rs  main.rs
(+45 files in other folders)
