[workspace]
members = [
    "xtask",
    "crates/zitpit-admin-client",
    "crates/zitpit-battle-cli",
    "crates/zitpit-battle-runner",
    "crates/zitpit-battle-types",
    "crates/zitpit-config",
    "crates/zitpit-core",
    "crates/zitpit-flags",
    "crates/zitpit-gateway",
    "crates/zitpit-manifest",
    "crates/zitpit-lab",
    "crates/zitpit-watch",
    "crates/zitpit-node-agent",
    "crates/zitpit-sessiond",
    "crates/zitpit-testing",
    "crates/zitpit-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["ZitPit Contributors"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["json", "macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.29", features = ["derive", "env"] }
crossterm = "0.29.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "full", "server", "server-auto", "tokio"] }
lru = "0.12.5"
rand = "0.8.5"
ratatui = "0.29.0"
rcgen = "0.14.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.17"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
regex = "1.11.1"
aho-corasick = "1.1.3"
flate2 = "1.1.5"
tar = "0.4.44"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
