[package]
name = "zitpit-battle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
zitpit-battle-runner = { path = "../zitpit-battle-runner" }
zitpit-battle-types = { path = "../zitpit-battle-types" }
