[package]
name = "zitpit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
http.workspace = true
http-body-util.workspace = true
lru.workspace = true
rcgen.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
url.workspace = true
uuid.workspace = true
regex.workspace = true
aho-corasick.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
shell-words.workspace = true
zitpit-config = { path = "../zitpit-config" }
