[package]
name = "zitpit-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
uuid.workspace = true
zitpit-admin-client = { path = "../zitpit-admin-client" }
zitpit-core = { path = "../zitpit-core" }
